grid column html addition to CardGenerator.cs, collapse, expand bug fix

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,7 +1,6 @@
 .gauge-parent {
   position: relative;
   display: -ms-flexbox;
-  display: flex;
   -ms-flex-direction: column;
   flex-direction: column;
   min-width: 0;
